# data-science

./: .gitignore  README.md  environment.yml  pyproject.toml
analysis/: 301_csv_ops_error_handling.ipynb  301_csv_ops_error_handling_specs.ipynb
code_blocks/data_manipulations/: csv_files.ipynb
data_engineering/01_read_write_files/: cvs_ops.md
data_science/: modular_pipeline_specs.md
docs/: content-numbering.md
docs/taxonomy/: tech_category_type_1.md  tech_category_type_2.md
smaddanki_labs/: Copy of Data Pipeline Principles.drawio
smaddanki_labs/data_engineering/01_read_write_files/: 101_csv_ops_foundation.ipynb  301_csv_ops_advanced.ipynb  401_csv_ops_complex.ipynb
smaddanki_labs/data_engineering/02_select_columns/: 301_column_ops_advanced.ipynb
smaddanki_labs/machine_learning/homl3/: data.ipynb  linear_regression.ipynb
smaddanki_labs/pipelines/: sp500_data_loader.ipynb
smaddanki_labs/pipelines/data_pipelines/: Spark Stock Market Incremental Pipeline.ipynb
smaddanki_labs/visualisation/: StatsAnalyzer.ipynb  distribution_plot.ipynb  fin_TA_dash.ipynb  findataviz.ipynb
