[tool.poetry]
name = "smaddanki-labs"
version = "0.1.0"
description = ""
authors = ["Sudhamshu Addanki <sudhamshuaddanki@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.3"
scikit-learn = "^1.5.2"
numpy = "^2.1.3"
matplotlib = "^3.9.2"



[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "$version"
version_scheme = "semver2"
version_provider = "poetry"
update_changelog_on_bump = true
major_version_zero = true
[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
