[tool.poetry]
name = "smaddanki-labs"
version = "0.1.0"
description = ""
authors = ["Sudhamshu Addanki <sudhamshuaddanki@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
pandas = "^2.2.3"
scikit-learn = "^1.5.2"
numpy = "^2.1.3"
matplotlib = "^3.9.2"
jupyterlab = "^4.3.1"
statsmodels = "^0.14.4"
seaborn = "^0.13.2"
panel = "^1.5.4"
bokeh = "^3.6.1"
holoviews = "^1.20.0"
yfinance = "^0.2.50"
hvplot = "^0.11.1"
jupyter-bokeh = "^4.0.5"
financedatabase = "^2.2.2"
pyarrow = "^18.1.0"
financetoolkit = "^1.9.8"



[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "$version"
version_scheme = "semver2"
version_provider = "poetry"
update_changelog_on_bump = true
major_version_zero = true
[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
